--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -134,12 +134,12 @@ import { siteConfig } from "../config";
       <h2
         class="text-pretty text-xl sm:text-2xl md:text-5xl font-bold tracking-tight text-gray-700 animate-fade-in"
       >
-        Hello! 👋
+        Hallo! 👋
       </h2>
       <h1
         class="mt-6 sm:mt-8 md:mt-10 text-pretty text-4xl sm:text-5xl md:text-6xl lg:text-8xl font-bold tracking-tight text-gray-800 animate-fade-in animation-delay-200"
       >
-        I'm <span style={{ color: siteConfig.accentColor }}
+        Ich bin <span style={{ color: siteConfig.accentColor }}
           >{siteConfig.name}</span
         >
       </h1>
@@ -149,6 +149,11 @@ import { siteConfig } from "../config";
         {siteConfig.title}
       </p>
     </div>
+      <img
+              src="../assets/foto.JPG"
+              alt={"Portrait von " + siteConfig.name}
+              class="rounded-full w-75 h-75 object-cover shadow-lg ml-32 animate-fade-in animation-delay-600"
+      />
   </div>
   <div
     class="absolute bottom-0 left-0 right-0 p-8 sm:p-12 md:p-24 flex gap-x-4 sm:gap-x-6 md:gap-x-8 text-gray-700 animate-fade-in animation-delay-600"
@@ -186,7 +191,7 @@ import { siteConfig } from "../config";
           target="_blank"
           rel="noopener noreferrer"
           aria-label="LinkedIn"
-          class="transition-colors duration-300 hover:text-[var(--accent-color)]"
+          class="transition-colors duration-300 hover:text-[var(--accent-color)] external-link"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -249,7 +254,7 @@ import { siteConfig } from "../config";
           target="_blank"
           rel="noopener noreferrer"
           aria-label="GitHub"
-          class="transition-colors duration-300 hover:text-[var(--accent-color)]"
+          class="transition-colors duration-300 hover:text-[var(--accent-color)] external-link"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
