--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,3 +3,14 @@
 body {
   font-family: 'IBM Plex Mono', monospace;
 }
+
+a.external-link::after {
+    content: "";
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    margin-left: 0.2em;
+    vertical-align: middle;
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 24 24"><path stroke="currentColor" stroke-width="2" d="M18 13v6a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6m5-3h4m0 0v4m0-4L10 14"/></svg>') no-repeat center center;
+    background-size: 1em 1em;
+}
