update impressum und ds

--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -35,6 +35,10 @@ import { siteConfig } from '../config';
                 des Webangebots).
             </p>
             <p>
+                GitHub kann Daten auch in Drittländer, insbesondere die USA, übermitteln.
+                GitHub ist nach dem EU-U.S. Data Privacy Framework zertifiziert, sodass ein angemessenes Datenschutzniveau gemäß Art. 45 DSGVO gewährleistet ist.
+            </p>
+            <p>
                 Weitere Informationen:
                 <a
                         href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement"
