--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -23,6 +23,16 @@ import { siteConfig } from '../config';
     </div>
 
     <div style="width:100%;margin-bottom: 1em;">
+        <b>Rechtsform</b>: Freiberuflicher Einzelunternehmer (nicht im Handelsregister eingetragen)<br/>
+        <b>Ladungsfähige Anschrift</b>: siehe oben<br/>
+        <br/>
+        <b>Umsatzsteuer-ID</b>: Nicht vorhanden (Freiberufler, § 27a UStG nicht anwendbar)<br/>
+        <br/>
+        <b>Verantwortlich für den Inhalt nach § 18 Abs. 2 MStV</b>:<br/>
+        Dennis Murtic, Anschrift wie oben
+    </div>
+
+    <div style="width:100%;margin-bottom: 1em;">
         <b>Verbraucherstreitbeilegung / Universalschlichtungsstelle</b><br/>
         Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor
         einer Verbraucherschlichtungsstelle teilzunehmen.
